tests/rosetta/out/Java/15-puzzle-game.error
javac: exit status 1
/tmp/M15PuzzleGame.java:45: error: '.class' expected
        Object j = int(r.get("idx"));
                      ^
/tmp/M15PuzzleGame.java:45: error: ';' expected
        Object j = int(r.get("idx"));
                                   ^
2 errors
